# syndicate

./: .gitignore  FAQ.md  Makefile  README.md  TODO.md  arp.rkt  checksum.rkt  configuration.rkt  demo-config.rkt  ethernet.rkt  fetchurl.rkt  info.rkt  ip.rkt  main.rkt  port-allocator.rkt  tcp.rkt  udp.rkt
doc/: big-bang.rkt.txt  chat-client.rkt.txt  chat.rkt.txt  demand-matcher.dot  demand-matcher.md  echo.rkt.txt  forward-chaining-hll.rkt.txt  forward-chaining-hll2.rkt.txt  forward-chaining-hll4.rkt.txt  notes-on-hll.md
examples/ircd/: .gitignore  Makefile  TODO.md  channel.rkt  config.rkt  main.rkt  message.rkt  protocol.rkt  session.rkt
examples/netstack/: README.md  TODO.md  arp.rkt  demo-config.rkt  (+9 more)
historical/: README.md
hs/: syndicate.cabal  treetrie1.hs  treetrie2.hs  treetrie3.hs  treetrie4.hs
hs/src/Syndicate/Dataspace/Trie/: ESOP2016.hs  ESOP2016v2.hs  ESOP2016v3.hs  Prefix.hs
hs/test/: Main.hs
hs/test/Syndicate/Dataspace/Trie/Tests/: ESOP2016.hs  ESOP2016v2.hs  ESOP2016v3.hs  Prefix.hs
js/: .gitignore  Makefile  README.md  package.json
prospect/: actor.rkt  big-bang.rkt  bitset.rkt  canonicalize.rkt  comprehensions.rkt  core.rkt  demand-matcher.rkt  endpoint.rkt  exn-util.rkt  functional-queue.rkt  ground.rkt  hash-order.rkt  info.rkt  lang.rkt  main.rkt  mux.rkt  patch.rkt  pretty.rkt  random-test.rkt  route.rkt  trace.rkt  treap.rkt  trie.rkt  tset.rkt
prospect-gl/: 2d.rkt  texture.rkt
prospect-monolithic/: README.md  core.rkt  demand-matcher.rkt  ground.rkt  lang.rkt  mux.rkt  scn.rkt
racket/: FAQ.md  Makefile  README.md  info.rkt
(+791 files in other folders)
