name:                syndicate
version:             0.1.0.0
synopsis: An Actor-based language with multicast, managed shared state, and grouping.
copyright: Copyright © 2016 Tony Garnock-Jones
homepage:            http://syndicate-lang.org/
license:             LGPL-3
license-file:        LICENSE
author:              Tony Garnock-Jones
maintainer:          tonyg@leastfixedpoint.com
category:            Concurrency
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Syndicate.Dataspace.Trie.ESOP2016
                       , Syndicate.Dataspace.Trie.ESOP2016v2
                       , Syndicate.Dataspace.Trie.ESOP2016v3
                       , Syndicate.Dataspace.Trie.Prefix
  build-depends:       base
                       , containers
  hs-source-dirs:      src
  default-language:    Haskell2010

test-suite syndicate-dataspace-testsuite
  type: exitcode-stdio-1.0
  main-is: Main.hs
  build-depends: base
                 , containers
                 , QuickCheck
                 , HUnit
                 , Cabal
                 , test-framework
                 , test-framework-hunit
                 , test-framework-quickcheck2
                 , syndicate
  hs-source-dirs: test
  default-language:    Haskell2010
